# GameOfLife

./: CMakeLists.txt
CMakeModules/: README.md
docker/: Dockerfile
include/: cell.h  csvrow.h  game.h  rules.h  visualizer.h
python/: README.txt  c_game.pxd
src/: cell.cpp  csvrow.cpp  game.cpp  visualizer.cpp
